<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.crackdress.wordgrab.recordings.MainActivity">

    <item
        android:id="@+id/action_all"
        android:orderInCategory="200"
        android:title="@string/show_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_incoming"
        android:orderInCategory="300"
        android:title="@string/show_incoming"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_outgoing"
        android:orderInCategory="300"
        android:title="@string/show_outgoing"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"/>
</menu>
